@@ -42,6 +42,19 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|SolrInputDocument
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
 name|junit
 operator|.
 name|BeforeClass
@@ -54,6 +67,15 @@ operator|.
 name|junit
 operator|.
 name|Test
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
 import|;
 end_import
 begin_import
@@ -1277,6 +1299,108 @@ argument_list|)
 argument_list|,
 literal|"/response/numFound==1"
 argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+comment|// SOLR-8866
+DECL|method|testUpdateLogThrowsForUnknownTypes
+specifier|public
+name|void
+name|testUpdateLogThrowsForUnknownTypes
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|SolrInputDocument
+name|doc
+init|=
+operator|new
+name|SolrInputDocument
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|addField
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"444"
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|addField
+argument_list|(
+literal|"text"
+argument_list|,
+operator|new
+name|Object
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|//Object shouldn't be serialized later...
+name|AddUpdateCommand
+name|cmd
+init|=
+operator|new
+name|AddUpdateCommand
+argument_list|(
+name|req
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|cmd
+operator|.
+name|solrDoc
+operator|=
+name|doc
+expr_stmt|;
+try|try
+block|{
+name|h
+operator|.
+name|getCore
+argument_list|()
+operator|.
+name|getUpdateHandler
+argument_list|()
+operator|.
+name|addDoc
+argument_list|(
+name|cmd
+argument_list|)
+expr_stmt|;
+comment|// should throw
+block|}
+catch|catch
+parameter_list|(
+name|SolrException
+name|e
+parameter_list|)
+block|{
+if|if
+condition|(
+name|e
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+literal|"serialize"
+argument_list|)
+condition|)
+block|{
+return|return;
+comment|//passed test
+block|}
+throw|throw
+name|e
+throw|;
+block|}
+name|fail
+argument_list|()
 expr_stmt|;
 block|}
 block|}
